Add unit tests for DefaultNettyServletContext, update CLAUDE.md
Cover all public methods of DefaultNettyServletContext with 54 unit
tests: attributes, init parameters, servlet/filter registration
(including inner registration classes), resource methods, and simple
getters. Add JUnit Jupiter test dependency to the MVC module.

Update CLAUDE.md with sub-package layout, dependency flow, development
workflow (TDD), and a concrete single-test example.